[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/splash_screen/splash_screen.gd" type="Script" id=2]
[ext_resource path="res://art/newton_rod.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 1 )

[node name="InitiaSetup" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.752941, 0.262745, 0.109804, 1 )

[node name="GameTitle" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -236.5
margin_right = 236.5
margin_bottom = 150.0
custom_fonts/font = SubResource( 2 )
text = "Dodge The Creep"
align = 1
valign = 1
autowrap = true

[node name="ProgressBar" type="ProgressBar" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -192.0
margin_top = -104.0
margin_right = 208.0
margin_bottom = -64.0
mouse_filter = 2

[node name="Clock" type="Control" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 3.0
margin_top = -134.0
margin_right = 3.0
margin_bottom = 205.0

[node name="Second" type="TextureRect" parent="Clock"]
margin_left = 182.0
margin_top = 126.0
margin_right = 284.0
margin_bottom = 408.0
rect_rotation = 90.0
rect_scale = Vector2( 0.7, 0.7 )
rect_pivot_offset = Vector2( 51, 0 )
texture = ExtResource( 3 )

[node name="Minute" type="TextureRect" parent="Clock"]
margin_left = 182.0
margin_top = 126.0
margin_right = 284.0
margin_bottom = 408.0
rect_rotation = -360.0
rect_scale = Vector2( 0.55, 0.55 )
rect_pivot_offset = Vector2( 52, 0 )
texture = ExtResource( 3 )

[node name="SecondTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[connection signal="value_changed" from="ProgressBar" to="." method="_on_ProgressBar_value_changed"]
[connection signal="timeout" from="SecondTimer" to="." method="_on_SecondTimer_timeout"]
